# src/main/kotlin/ru/taynov/share/dto/DownloadFileRequest.kt
@@ -1,5 +1,0 @@
-package ru.taynov.share.dto
-
-data class DownloadFileRequest (
-    val password: String?
-)
